Fixing spacing issue/footer homepage

--- a/code/RegularPages/newstyle.css
+++ b/code/RegularPages/newstyle.css
@@ -85,6 +85,7 @@ header a:hover {
   width: 100%;
 }
 .hero-container img {
+  display: block;
   width: 100%;
   object-fit: cover;
 }
@@ -141,7 +142,7 @@ header a:hover {
   display: block;
   text-align: center;
   background-color: #ffffff;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .projects-container h4 {
   color: #1f2933;
@@ -171,6 +172,7 @@ header a:hover {
   font-weight: 100;
   color: #1f2933;
   margin: 0px;
+  margin-top: 10px;
 }
 .video-container p {
   color: #4b5563;
@@ -237,6 +239,7 @@ header a:hover {
 .certifications h4 {
   color: #4b5563;
   font-size: 20px;
+  margin-top: 20px;
   font-weight: 100;
 }
 .certifications .slider-container {
@@ -295,7 +298,7 @@ header a:hover {
   padding: 20px;
   background-color: #ffffff;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
 }
 .tech-stack h2 {
@@ -330,7 +333,7 @@ footer {
   padding: 20px;
 }
 footer ul {
-  display: flex;
+  display: block;
   justify-content: center;
   padding: 10px 0px px 0px;
   margin: 0;
@@ -338,6 +341,8 @@ footer ul {
 }
 footer li {
   margin-right: 20px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 footer h4 {
   color: #1f2933;
@@ -346,6 +351,7 @@ footer h4 {
 }
 footer a {
   color: #1f2933;
+  text-decoration: none;
   font-weight: lighter;
 }
 footer a:hover {
@@ -696,6 +702,9 @@ button {
     color: #4b5563;
   }
   /* --- Projects Section --- */
+  .projects-container {
+    margin-top: 40px;
+  }
   .projects-container h4 {
     font-size: 28px;
   }
@@ -774,6 +783,9 @@ button {
     max-width: 800px;
     object-fit: cover;
     object-position: left;
+  }
+  footer ul {
+    display: flex;
   }
 }
 
